# Chess

./: .gitignore  CMakeLists.txt  Makefile  README.md  chessTypes.h  main.c  main.cpp
Board/: Board.c  Board.h  CMakeLists.txt  main.c  test.c
Board/include/: board.h
Board/src/: board.c  main.c
GUI/: CMakeLists.txt  main.cpp  resources.qrc  test.cpp
GUI/include/: boardCell.hpp  dialog.hpp  guiBoard.hpp  helpers.hpp  interfaces.hpp  piecesIcon.hpp  server.hpp  startMenu.hpp
GUI/src/: boardCell.cpp  dialog.cpp  guiBoard.cpp  helpers.cpp  interfaces.cpp  piecesIcon.cpp  server.cpp  startMenu.cpp
Game-End/: test.c
Game-End/include/: check.h  checkMate.h  saveGame.h  staleMate.h
Game-End/src/: check.c  checkMate.c  saveGame.c  staleMate.c
GameEnd/: CMakeLists.txt  test.c
GameEnd/include/: check.h  checkMate.h  saveGame.h  staleMate.h
GameEnd/src/: checkMate.c  saveGame.c  staleMate.c
Moves/: CMakeLists.txt  test.c
Moves/include/: bishopMoves.h  captures.h  check.h  kingMoves.h  knightMoves.h  pawnMoves.h  queenMoves.h  rockMoves.h  rookMoves.h  saveGame.h  utility.h
Moves/src/: bishopMoves.c  captures.c  check.c  kingMoves.c  knightMoves.c  pawnMoves.c  queenMoves.c  rockMoves.c  rookMoves.c  saveGame.c  staleMate.c  utility.c
Pieces/: CMakeLists.txt  bishop.c  bishop.h  king.c  king.h  knight.c  knight.h  pawn.c  pawn.h  player.c  queen.c  queen.h  rock.c  rock.h  test.c
Pieces/include/: bishop.h  captures.h  king.h  knight.h  pawn.h  player.h  queen.h  rock.h  rook.h
Pieces/src/: bishop.c  captures.c  king.c  knight.c  pawn.c  player.c  queen.c  rock.c  rook.c
Pieces/testing/: input.txt  output.txt
